Sun Aug 22 12:04:59 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkliststore.c (gtk_list_store_sort_iter_changed): Use the
	correct tree path (#150289, Morten Welinder).

Sun Aug 22 00:08:44 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #150406, reported by Fernando San Martín Woerner, patch
	by Gustavo Carneiro.
	
	* gtk/gtkentrycompletion.c 
	(gtk_entry_completion_default_completion_func): Check that 
	column is of type G_TYPE_STRING before proceeding.

Sat Aug 21 23:52:13 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreestore.c (gtk_tree_store_swap): Don't use an 
	uninitialized tree iter.  (#150414, Torsten Schoenfeld)

Sat Aug 21 23:29:54 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #150738, Tomislav Jonjic.
	
	* gtk/gtktoolitem.h (GTK_IS_TOOL_ITEM_CLASS): 
	* gtk/gtktoolbutton.h (GTK_IS_TOOL_BUTTON_CLASS): 
	* gtk/gtktoggleaction.h (GTK_IS_TOGGLE_ACTION_CLASS): 
	* gtk/gtkseparatortoolitem.h (GTK_IS_SEPARATOR_TOOL_ITEM_CLASS): 
	* gtk/gtkradiotoolbutton.h (GTK_IS_RADIO_TOOL_BUTTON_CLASS): 
	* gtk/gtkradioaction.h (GTK_IS_RADIO_ACTION_CLASS): 
	* gtk/gtkuimanager.h (GTK_IS_UI_MANAGER_CLASS): 
	* gtk/gtkaction.h (GTK_IS_ACTION_CLASS): Fix macro definitions.

Wed Aug 18 17:25:26 2004  Manish Singh  <yosh@gimp.org>

	* demos/testpixbuf-save.c
	* demos/gtk-demo/hypertext.c: Get rid of some unnecessary casts.

	* demos/gtk-demo/appwindow.c: Make activate_email and activate_url
	match the arguments for GtkAboutDialogActivateLinkFunc.

Wed Aug 18 16:18:00 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtktreeview.c (gtk_tree_view_row_inserted): Initialize height
	from fixed_height before we do anything, so it always has a valid
	value.

	* gtk/gtkfilechooserdefault.c (shortcuts_reload_icons): Fix call
	to gtk_tree_model_get (missing "," in param list).

2004-08-18  Federico Mena Quintero  <federico@ximian.com>

	Merged from 2.4:

	Fixes #149251:

	* gtk/gtkfilechooserdefault.c: Renamed SHORTCUTS_COL_PATH to